# qt-spdlog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  estream.h  logmanager.cpp  logmanager.h  logmanager_p.h  logstream.cpp  logstream.h  main.cpp
spdlog-1.15.3/: CMakeLists.txt
spdlog/lib/: spdlog.lib
spdlog/lib/cmake/spdlog/: spdlogConfigTargets.cmake
spdlog/lib/pkgconfig/: spdlog.pc
